--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "web-vitals": "^4.2.4"
   },
