--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "careerus",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.48.1",
-    "axios": "^1.7.9",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.468.0",
-    "next": "^15.0.3",
-    "react": "^19.0.0-rc-66855b96-20241106",
-    "react-dom": "^19.0.0-rc-66855b96-20241106",
-    "react-hook-form": "^7.53.2",
-    "recharts": "^2.15.1",
-    "tailwind-merge": "^2.5.5",
-    "web-vitals": "^4.2.4"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "name": "careerus",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/cache": "^11.14.0",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/material": "^6.4.6",
+        "@mui/material-nextjs": "^6.4.3",
+        "@supabase/auth-helpers-nextjs": "^0.10.0",
+        "@supabase/supabase-js": "^2.48.1",
+        "axios": "^1.7.9",
+        "clsx": "^2.1.1",
+        "dotenv": "^16.4.7",
+        "lucide-react": "^0.468.0",
+        "next": "^15.0.3",
+        "react": "^19.0.0-rc-66855b96-20241106",
+        "react-dom": "^19.0.0-rc-66855b96-20241106",
+        "react-hook-form": "^7.53.2",
+        "recharts": "^2.15.1",
+        "tailwind-merge": "^2.5.5",
+        "web-vitals": "^4.2.4"
+    },
+    "devDependencies": {
+        "postcss": "^8",
+        "prettier": "3.5.3",
+        "tailwindcss": "^3.4.1"
+    }
 }
