--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@emotion/cache": "^11.14.0",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@google/generative-ai": "^0.23.0",
         "@mui/material": "^6.4.6",
         "@mui/material-nextjs": "^6.4.3",
         "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -24,6 +25,7 @@
         "react": "^19.0.0-rc-66855b96-20241106",
         "react-dom": "^19.0.0-rc-66855b96-20241106",
         "react-hook-form": "^7.53.2",
+        "react-markdown": "^10.0.1",
         "recharts": "^2.15.1",
         "tailwind-merge": "^2.5.5",
         "web-vitals": "^4.2.4"
