--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-hook-form": "^7.53.2",
         "react-markdown": "^10.0.1",
         "recharts": "^2.15.1",
+        "remark-gfm": "^4.0.1",
         "tailwind-merge": "^2.5.5",
         "web-vitals": "^4.2.4"
     },
