--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "web-vitals": "^4.2.4"
     },
     "devDependencies": {
+        "eslint": "9.22.0",
+        "eslint-config-next": "15.2.3",
         "postcss": "^8",
         "prettier": "3.5.3",
         "tailwindcss": "^3.4.1"
