--- a/careerus-market-trends/package.json
+++ b/careerus-market-trends/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
+    "careerus-market-trends": "file:",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
