--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.48.1",
         "axios": "^1.7.9",
+        "careerus": "file:",
         "clsx": "^2.1.1",
         "dotenv": "^16.4.7",
         "lucide-react": "^0.468.0",
@@ -26,6 +27,7 @@
         "react-dom": "^19.0.0-rc-66855b96-20241106",
         "react-hook-form": "^7.53.2",
         "react-markdown": "^10.1.0",
+        "react-to-pdf": "^2.0.0",
         "recharts": "^2.15.1",
         "remark-gfm": "^4.0.1",
         "tailwind-merge": "^2.5.5",
