--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "recharts": "^2.15.1",
         "remark-gfm": "^4.0.1",
         "tailwind-merge": "^2.5.5",
-        "web-vitals": "^4.2.4"
+        "web-vitals": "^4.2.4",
+        "xml2js": "^0.6.2"
     },
     "devDependencies": {
         "eslint": "9.22.0",
